// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChickenEditor component: Should render in add new mode 1`] = `
<ChickenEditorRenderer
  breed=""
  error=""
  hatched=""
  name=""
  newImage={null}
  onFieldChanged={[Function]}
  onRemoveProfilePhoto={[Function]}
  onResetProfilePhoto={[Function]}
  onSaveForm={[Function]}
  onSelectPhoto={[Function]}
  photoPath=""
  photoUrl=""
  thumbnailPath=""
  thumbnailUrl=""
/>
`;

exports[`ChickenEditor component: Should render in edit mode 1`] = `
<ChickenEditorRenderer
  breed="Cuckoo Maran"
  error=""
  hatched="2016-10-05"
  name="Chicken1"
  newImage={null}
  onFieldChanged={[Function]}
  onRemoveProfilePhoto={[Function]}
  onResetProfilePhoto={[Function]}
  onSaveForm={[Function]}
  onSelectPhoto={[Function]}
  originalPhotoUrl="https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180"
  photoPath="uploads/user:user1/flock:flock1/1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg"
  photoUrl="https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180"
  thumbnailPath="uploads/user:user1/flock:flock1/thumb_1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg"
  thumbnailUrl="https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2Fthumb_1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=689dfae8-c034-46ae-9984-db5c4ee3fe72"
/>
`;
